# End2end-Federated-Learning

./: README.md  README_CN.md
Client-Android/: gradle.properties  settings.gradle
Client-Android/app/: CMakeLists.txt  build.gradle
Client-Android/app/src/androidTest/java/com/example/websocket/: ExampleInstrumentedTest.java
Client-Android/app/src/main/: AndroidManifest.xml
Client-Android/app/src/main/java/com/demo/: App.java  EmptyActivity.java  MainActivity.java  MnnTrainFragment.java
Client-Android/app/src/main/java/com/example/: MainActivity_test.java
Client-Android/app/src/main/java/com/example/nativemnn/mnn/: MNNDataNative.java
Client-Android/app/src/main/java/com/example/nativemnn/utils/: Common.java
Client-Android/app/src/main/java/com/example/websocket/client/: ClientWebSocketListener.java
Client-Android/app/src/main/java/com/example/websocket/constants/: Constants.java
Client-Android/app/src/main/java/com/example/websocket/service/: ClientWebSocketService.java  MnnTrainService.java
Client-Android/app/src/main/java/com/example/websocket/utils/: CommonUtil.java  DeviceUtil.java  FileUtil.java
Client-Android/app/src/main/jni/: mnndatanative.cpp
Client-Android/app/src/main/res/layout/: activity_empty.xml  activity_main.xml  fragment_mnn_train.xml
Client-Android/app/src/main/res/values/: colors.xml  strings.xml
Client-Android/app/src/test/java/com/example/websocket/: ExampleUnitTest.java
Server-Python/: test.html
Server-Python/model/: init.mnn  mnist.snapshot.mnn
Server-Python/py/: MNNAgg.py  parameter.py  (+4 more)
data/: mnist.snapshot.mnn
(+3 files in other folders)
